<resources>
    <string name="app_name">Monochrome-Player</string>
    <string name="empty_state_no_permission">Grant media access to show your songs.</string>
    <string name="empty_state_no_music">No songs found on this device.</string>
    <string name="nav_tracks">Tracks</string>
    <string name="nav_genre">Genre</string>
    <string name="nav_artists">Artists</string>
    <string name="nav_playlists">Playlists</string>
    <string name="nav_albums">Albums</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_now_playing">Now</string>
    <string name="placeholder_artists">Artists view</string>
    <string name="placeholder_playlists">Playlists view coming soon.</string>
    <string name="placeholder_albums">Albums view</string>
    <string name="settings_title">Settings</string>
    <string name="settings_theme_section">Theme</string>
    <string name="theme_android">Android</string>
    <string name="theme_material_you">Material You</string>
    <string name="theme_monochrome">Monochrome</string>
    <string name="theme_bozkurt">Bozkurt</string>
    <string name="theme_mecha">Mecha</string>
    <string name="settings_wallpaper_section_mecha">Mecha Wallpaper</string>
    <string name="settings_wallpaper_section">Wallpaper</string>
    <string name="choose_wallpaper">Choose Wallpaper</string>
    <string name="clear_wallpaper">Clear Wallpaper</string>
    <string name="settings_sort_section">Sort Tracks By</string>
    <string name="sort_alphabetical">A-Z</string>
    <string name="sort_date_added">Date Added</string>
    <string name="settings_about_section">About</string>
    <string name="settings_version">Version 1.0</string>
    <string name="settings_description">A beautiful minimalist music player with Material Design</string>
    <string name="player_not_playing">Nothing playing</string>
    <string name="player_artist_unknown">Unknown artist</string>
    <string name="player_album_unknown">Unknown album</string>
    <string name="player_shuffle">Shuffle</string>
    <string name="player_back">Back 10s / Previous</string>
    <string name="player_play_pause">Play / Pause</string>
    <string name="player_forward">Forward 10s / Next</string>
    <string name="player_repeat">Repeat</string>
    <string name="player_artwork_content_desc">Album artwork</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="create_playlist">Create playlist</string>
    <string name="favorite">Favorite</string>
    <string name="onboarding_welcome">Welcome to your smart Music Player!</string>
    <string name="onboarding_theme_title">Choose your theme</string>
    <string name="onboarding_ai_title">AI Setup</string>
    <string name="onboarding_ai_found">AI Model found! Do a full scan of your library with the button below!</string>
    <string name="onboarding_ai_missing">Uh Oh... We could not find a model! You sure the App is from the Play Store? :) Write us a mail; Let us see if we can sort it out</string>
    <string name="onboarding_done">You are all set up! Enjoy!</string>
</resources>
